<resources>
    <string name="app_name">EL15 Load Simulator</string>
    <string name="subtitle">BLE peripheral · pretends to be an EL15 load</string>
    <string name="start_adv">Start advertising</string>
    <string name="stop_adv">Stop advertising</string>
    <string name="circuit">Simulated source</string>
    <string name="src_fixed">Fixed circuit</string>
    <string name="src_battery">Battery</string>
    <string name="emf">Source voltage (V)</string>
    <string name="series_r">Series resistance (Ω)</string>
    <string name="chemistry">Chemistry</string>
    <string name="cells">Cells in series</string>
    <string name="lead_voltage">Battery voltage</string>
    <string name="capacity">Capacity (Ah)</string>
    <string name="internal_r">Internal resistance (Ω)</string>
    <string name="initial_soc">State of charge (%)</string>
    <string name="recharge">Recharge battery</string>
    <string name="apply">Apply</string>
    <string name="state">Simulated load state</string>
    <string name="log_title">Received commands</string>
    <string name="clear_log">Clear</string>
    <string name="perm_needed">Bluetooth permission is required to advertise</string>
    <string name="adv_name">Advertised name</string>
</resources>
